--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.18.0"
